[package]
name = "async-io-bufpool"
description="A helper crate to read from AsyncReads in an extremely memory-efficient way"
license="ISC"
repository = "https://github.com/mel-project/async-io-bufpool"
version = "0.1.1"
edition = "2021"

[dependencies]
bytes = "1.8.0"
crossbeam-queue = "0.3.11"
futures-util = {version="0.3.31", features=["io"]}
