[package]
name = "async-io-bufpool"
description="Efficient asynchronous I/O operations with minimal idle memory overhead"
license="ISC"
repository = "https://github.com/mel-project/async-io-bufpool"
version = "0.1.2"
edition = "2021"

[dependencies]
bytes = "1.8.0"
crossbeam-queue = "0.3.11"
futures-util = {version="0.3.31", features=["io"]}
pin-project-lite = "0.2.16"
pretty-readme="0.1"

[dev-dependencies]
pollster="0.4"
